# Sukakpak

./: .gitignore  Cargo.toml  README.md
ass/ass_bin/: test.ass_glsl
ass/ass_bin/src/: main.rs
ass/ass_lib/: Cargo.toml
ass/ass_lib/src/: lib.rs  shader_type.rs  vk.rs
ass/ass_types/: Cargo.toml
ass/ass_types/src/: lib.rs  shader_type.rs
ass/ass_vk/: Cargo.toml
ass/ass_vk/src/: lib.rs
ass/ass_wgl/: Cargo.toml
ass/ass_wgl/src/: lib.rs
ass_bin/: Cargo.toml
ass_bin/src/: main.rs
ass_bin/test_shaders/main/: config.json  shader.frag  shader.vert
ass_bin_v2/: Cargo.toml  test.ass_spv  test.spv
ass_bin_v2/src/: main.rs
ass_bin_v2/test_shader/: project.json  vert.wgsl
ass_lib/: Cargo.toml
ass_lib/shaders/: push.frag  push.vert
ass_lib/src/: asm_spv.rs  assembled_spv.rs  example_naga_output.txt  lib.rs
ass_lib_v2/: Cargo.toml
ass_lib_v2/src/: lib.rs  shader_type.rs  vk.rs
asset_manager/: Cargo.toml
asset_manager/src/: lib.rs
free_list/: Cargo.toml
free_list/src/: lib.rs
main/: Cargo.toml  debug.cap  dis  out_frag.spv  out_vert.spv  test_vert.spv  test_vert2.spv  v2_test.ass_spv  v2_test_2.ass_spv
main/shaders/v2_test/: vert.wgsl
main/src/: clonecraft.rs  main.rs
main/v2_test_2/: project.json  vert.wgsl
memory_allocator/: Cargo.toml
memory_allocator/src/: buddy.rs  lib.rs  resizable_buddy.rs
renderer/: Cargo.toml
renderer/src/: command_pool.rs  framebuffer.rs  index_buffer.rs  mesh.rs  present_images.rs  uniform.rs  vertex_buffer.rs
renderer/src/command_pool/render_pass/: semaphore_buffer.rs
renderer/src/pipeline/: shaders.rs
renderer/src/shaders/: main.frag  main.frag.spv  main.vert  main.vert.spv
simple_app/: Cargo.toml
simple_app/src/: clonecraft.rs  main.rs
src/: graphics.rs  main.rs
src/graphics/: command_pool.rs  commands.rs  depth_buffer.rs  device.rs  framebuffer.rs  index_buffer.rs  mesh.rs  pipeline.rs  present_images.rs  push_constant.rs  shaders.rs  texture.rs  uniform.rs  vertex_buffer.rs
src/graphics/command_pool/: render_pass.rs
src/graphics/command_pool/render_pass/: semaphore_buffer.rs
src/graphics/pipeline/: shaders.rs
src/shaders/: main.frag  main.frag.spv  main.vert  main.vert.spv  push.frag  push.frag.spv  push.vert  shader.sh
sukakpak/: Cargo.toml  README.md
sukakpak/shaders/: alt.frag  alt.frag.spv  alt.vert  alt.vert.spv  push.vert.spv  shader.sh  uniform.frag  uniform.frag.spv
sukakpak/shaders/v2/: v2_test.ass_glsl  v2_test.ass_spv
sukakpak/shaders/v2/v2_test/: vert.wgsl
sukakpak/shaders/v2/v2_test/test_shader/: vert.wgsl
sukakpak/src/: backend.rs  events.rs  lib.rs  mesh.rs  stub_backend.rs  vertex.rs  vulkan.rs  web_stub.rs  webgl.rs
sukakpak/src/backend/: command_pool.rs  depth_buffer.rs  framebuffer.rs  framebuffer_swapper.rs  framebuffer_target.rs  freelist.rs  pipeline.rs  present_image.rs  render_core.rs  renderpass.rs  resource_pool.rs  vertex_buffer.rs  vertex_layout.rs
sukakpak/src/backend/framebuffer/: color_buffer.rs  framebuffer_target.rs
sukakpak/src/backend/pipeline/: shaders.rs
sukakpak/src/backend/renderpass/: semaphore_buffer.rs
sukakpak/src/backend/resource_pool/: descriptor_pool.rs
sukakpak/src/vulkan/: backend.rs  events.rs
sukakpak/src/vulkan/backend/: command_pool.rs  framebuffer.rs  pipeline.rs  ref_counter.rs  render_core.rs  renderpass.rs  resource_pool.rs  vertex_layout.rs
sukakpak/src/vulkan/backend/framebuffer/: color_buffer.rs  depth_buffer.rs  framebuffer_target.rs
sukakpak/src/vulkan/backend/pipeline/: shaders.rs
sukakpak/src/vulkan/backend/renderpass/: semaphore_buffer.rs
sukakpak/src/vulkan/backend/resource_pool/: descriptor_pool.rs
sukakpak/src/webgl/: backend.rs  event_loop.rs  mesh.rs  shader.rs
sukakpak/src/webgl/backend/: mesh.rs  shader.rs  texture.rs
summit_surveyor/: Cargo.toml
summit_surveyor/shaders/world/: index.json  push.vert
summit_surveyor/src/: camera.rs  events.rs  graph.rs  graphics_engine.rs  graphics_system.rs  grid.rs  gui.rs  lib.rs  lift.rs  main.rs  model.rs  skiier.rs  terrain.rs  texture.rs  transform.rs
summit_surveyor/src/graphics_engine/gfx/: shader.rs
summit_surveyor/src/gui/: egui_integration.rs
summit_surveyor/src/skiier/: behavior_tree.rs
summit_surveyor_bin/: Cargo.toml
summit_surveyor_bin/src/: main.rs
summit_surveyor_v2/: .gitignore  Cargo.toml  debug.cap  foo.txt
summit_surveyor_v2/models/: basic_lift.blend  basic_lift.blend1  basic_lift.mtl
summit_surveyor_v2/shaders/gui_shader/: index.json  push.vert  push.vert.spv
summit_surveyor_v2/shaders/shaders/test/: index.json  push.vert
summit_surveyor_v2/shaders/test/: push.vert  push.vert.spv
summit_surveyor_v2/shaders/world/: index.json  push.frag  push.frag.spv  push.vert  push.vert.spv
summit_surveyor_v2/src/: camera.rs  graph.rs  gui.rs  hud.rs  lift.rs  main.rs  model.rs  skiier.rs  terrain.rs  transform.rs
summit_surveyor_v2/src/gui/: event.rs  text.rs
summit_surveyor_v2/src/skiier/: decision_tree.rs
summit_surveyor_v2/web-game/: Cargo.toml
textures/: grass.kra
web-game/: Cargo.toml
web-game/src/: lib.rs  utils.rs
www/: index.html  index.js  package-lock.json  package.json
