[package]
name = "ash_practice"
version = "0.1.0"
authors = ["Nick Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32.1"
ash-window = "0.6.0"
winit = "0.24.0"
nalgebra = "0.26.2"