[package]
name = "ass_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naga={version="0.5.0", features = ["glsl-in","spv-out"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"