[package]
name = "main"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32.1"
ash-window = "0.6.0"
winit = "0.24.0"
nalgebra = "0.26.2"
image = "0.23.14"
generational-arena = "0.2.8"
backtrace = "0.3.59"
phf = { version = "0.8", features = ["macros"] }
renderer = {path = "../renderer"}
sukakpak = {path = "../sukakpak"}