[package]
name = "sukakpak"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.8"

backtrace = "0.3"
tobj = "3.0.1"
nalgebra = "0.29.0"
anyhow = "1.0.40"
phf = {version="0.8.0",features=["macros"]}
image = "0.23.14"
thiserror = "1.0.25"
cfg-if="1.0"
ass_lib = {path = "../ass/ass_lib"}
free_list = {path = "../free_list"}

# for vulkan
[dependencies.winit]
version="0.25.0"
optional=true

[dependencies.gpu-allocator]
version = "0.8.0"
optional=true

[dependencies.ash-window]
version = "0.6.0"
optional=true

[dependencies.ash]
version="0.32.1"
optional=true

[dependencies.ass_vk]
path = "../ass/ass_vk"
optional=true

# For Webgl and general web utilities
[dependencies.web-sys]
version="0.3.55"
features = ["Document","Element","HtmlCanvasElement","Performance",
	"WebGl2RenderingContext","Window"]
optional=true

[dependencies.wasm-bindgen]
version="0.2.78"
optional=true

[features]
backend_vulkan = ["ash","ash-window","gpu-allocator","winit","ass_vk"]
backend_web_stub = ["web-sys"]
backend_webgl = ["web-sys","wasm-bindgen"]
default = ["full_debug"]
full_debug = ["state_validation"]
no_validation=[]
state_validation = []
