[package]
name = "sukakpak"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.8"

backtrace = "0.3"
tobj = "4.0.0"
nalgebra = "0.32.3"
anyhow = "1.0.40"
phf = {version="0.8.0",features=["macros"]}
image = "0.24.7"
thiserror = "1.0.25"
cfg-if="1.0"
ass_lib = {path = "../ass/ass_lib"}
free_list = {path = "../free_list"}
ass_types = {path="../ass/ass_types"}


# for vulkan
[dependencies.winit]
version= "0.29.7"
features = ["rwh_05"]

optional=true
#used to make winit compatible with ash-window
[dependencies.raw-window-handle]
version = "0.5.2"
optional = true
[dependencies.gpu-allocator]
version = "0.24.0"
optional=true

[dependencies.ash-window]
version = "0.12.0"
optional=true

[dependencies.ash]
version= "0.37.3+1.3.251"
optional=true

[dependencies.ass_vk]
path = "../ass/ass_vk"
optional=true

# For Webgl and general web utilities
[dependencies.web-sys]
version="0.3.55"
features = ["Document","Element","HtmlCanvasElement","Performance","WebGlActiveInfo",
	"WebGl2RenderingContext","WebGlVertexArrayObject","WebGlTexture","WebGlUniformLocation","Window","WebGlShader","WebGlProgram","WebGlBuffer"]
optional=true
[dependencies.js-sys]
version="0.3.55"
optional=true

[dependencies.wasm-bindgen]
version="0.2.78"
optional=true

[dependencies.ass_wgl]
path="../ass/ass_wgl"
optional=true

[dependencies.console_log]
version="0.2"
optional=true

[dependencies.log]
version="0.4"
optional=true

[features]
backend_vulkan = ["ash","ash-window","gpu-allocator","winit","ass_vk","raw-window-handle"]
backend_web_stub = ["web-sys"]
backend_webgl = ["web-sys","js-sys","wasm-bindgen","ass_wgl","console_log","log"]
default = ["full_debug"]
full_debug = ["state_validation"]
no_validation=[]
state_validation = []
