[package]
name = "summit_surveyor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sukakpak = {path = "../sukakpak", features = ["no_validation"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
legion ={version= "0.3.1",default-features = false, features = ["wasm-bindgen","codegen"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion ={version= "0.3.1",default-features = true }
log="^0.4"