[package]
name = "summit_surveyor_v2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sukakpak = {path = "../sukakpak", features = []}
asset_manager = {path="../asset_manager"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
legion ={version= "0.3.1",default-features = false, features = ["wasm-bindgen","codegen"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion ={version= "0.4",default-features = false, features = ["wasm-bindgen","codegen"] }
log="^0.4"
epaint="0.13"
priority-queue = "1.0.5"

