[package]
name = "ass_vk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ass_lib = {path="../ass_lib"}
anyhow="1.0.44"
thiserror="1.0"
serde={version="1.0",features=["derive"]}
serde_json="1.0"
naga={version="0.7",features=["spv-out"]}
